--- a/document.html
+++ b/document.html
@@ -10,7 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Icons Title CSS-->
-    <title>EDSSHOP TOPUP ML</title>
+    <title>RFSTOREPBG TOPUP ML</title>
     <link rel="icon" href="icon.png" type="image/png" sizes="16x16" />
     <!-- Bootstrap core CSS-->
     <link href="https://zmod-store.github.io/css/bootstrap.min.css" rel="stylesheet" />
@@ -132,7 +132,7 @@
         <div class="row">
             <div class="col-sm-9">
                 <div class="text-center pt-3 pb-2">
-                    <img src="https://i.ibb.co/CWZMRfY/62-822-2608-3963-20220829-165025.jpg" class="mb-3" style="display: block; margin: 0 auto; border-radius: 10px !important; border: 2px solid #00ea1e;" width="120px" height="120px" />
+                    <img src="https://telegra.ph/file/b7dcd9e4dfdc01b61f8f7.jpg" class="mb-3" style="display: block; margin: 0 auto; border-radius: 10px !important; border: 2px solid #00ea1e;" width="120px" height="120px" />
                     <h5><b>
                             <font face="Monospace">Top Up Mobile Legends</font>
                         </b></h5>
@@ -256,7 +256,7 @@
                     var pay = document.getElementById("payment").value;
                     var uid = document.getElementById("userID").value;
                     var zon = document.getElementById("zoneID").value;
-                    var url = "https://wa.me/6282226083963?text=" +
+                    var url = "https://wa.me/6285726269397text=" +
                         "╔═════════════╗%0a║🇮🇩    - ORDER -   🇮🇩  》%0a╚═════════════╝ %0a*💎DIAMOND MOBILE LEGENDS💎*" + "%0a%0a" +
                         "%0a          *🔴DATA TUJUAN🔴*%0a╭◖❄❈-------------------------❈❄◗╮%0a" +
                         " | User ID    : *" + uid + "*%0a" +
@@ -271,7 +271,7 @@
                 }
             </script>
 
-            <!--<script>
+            <!--script>
 function gotowhatsapp() {
     var uid = document.getElementById("userID").value;
     var serverid = document.getElementById("zoneID").value;
@@ -295,7 +295,7 @@ function gotowhatsapp() {
 
     window.open(url, '_blank').focus();
 }
-</script>-->
+</script--!>
 
         </div>
     </div>
